--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
     <div class="card d-flex flex-column align-items-start">
       <div class="card-body d-flex flex-column align-items-start">
         <strong class="d-inline-block mb-2 text-primary">
-          <span class="badge badge-pill badge-dark">TEMPORADA</span>
+          <span class="badge badge-pill badge-dark">PRIMERA TEMPORADA</span>
         </strong>
         <h3 class="mb-0">TITULO </h3>
         <div class="mb-1 text-muted">
@@ -45,3 +45,22 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+    <div class="col-md-6">
+      <div class="card d-flex flex-column align-items-start">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">
+            <span class="badge badge-pill badge-dark"> SEGUNDA TEMPORADA</span>
+          </strong>
+          <h3 class="mb-0">TITULO </h3>
+          <div class="mb-1 text-muted">
+            <span class="badge badge-pill badge-success">FECHA</span>
+          </div>
+          <p class="card-text mb-auto">DESCRIPCION</p>
+          <a href="" class="btn-btn-info">LEER MÁS</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
