--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,24 +10,28 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/">Inicio <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isLogin">
         <a class="nav-link" routerLink="/nueva">Servicios</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isLogin">
         <a class="nav-link" routerLink="/about">Acerca de Nosotros</a>
       </li>
     </ul>
+
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="!isLogin">
         <a class="nav-link" routerLink="/login">Login </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isLogin">
       <a class="nav-link" routerLink="/register">Registrarse </a>
       </li>
-      <li class="nav-item">
-        <img src="#">
+      <li class="nav-item" *ngIf="isLogin">
+        <img src="{{fotoUsuario}}" class="rounded-circle">
+        <span class="badge pill badge-secondary">{{emailUsuario}}</span>
       </li>
-      <li class="nav-item">
+
+      <li class="nav-item" *ngIf="isLogin">
+        <span class="nav-link">{{nombreUsuario}}</span>
         <a class="nav-link" href="#" (click)="onLogout()">Salir</a>
       </li>
     </ul>
