creacion carpeta Guards

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,7 @@
 
       <li class="nav-item" *ngIf="isLogin">
         <span class="nav-link">{{nombreUsuario}}</span>
-        <a class="nav-link" href="#" (click)="onLogout()">Salir</a>
+        <a class="nav-link" href="#" (click)="onClickLogout()">Salir</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
